# phyc-chem

./: README.md
after dawn recarps/an/: CMakeLists.txt
after dawn recarps/an/core/: CMakeLIsts.txt  camera.cpp  shader.cpp  window_a.cpp
after dawn recarps/an/core/includes/: camera.h  shader.h
after dawn recarps/an/main/: Application.cpp  Application.h  CMakeLists.txt  color_overlay_fs.glsl  cubemap_fs.glsl  cubemap_vs.glsl  main.cpp  triangle_fs.glsl  triangle_vs.glsl
after dawn recarps/test_1/: CMakeLists.txt
after dawn recarps/test_1/includes/: window_a.h
after dawn recarps/test_1/main/: fs.glsl  main.cpp  vs.glsl
virtual_lab/: CMakeLists.txt
virtual_lab/core/: Application.cpp  CMakeLists.txt  Shader.cpp  glad.c
virtual_lab/core/includes/: Application.h  Shader.h
virtual_lab/core/includes/glad/: glad.h
virtual_lab/labs/: CMakeLists.txt
virtual_lab/labs/chemical_lab/: CMakeLists.txt  chemical_lab.cpp
virtual_lab/labs/chemical_lab/includes/: chemical_lab.h
virtual_lab/main/: CMakeLists.txt  main.cpp
virtual_lab/shaders/: default_fs.glsl  default_vs.glsl
